[gd_scene load_steps=9 format=3 uid="uid://dct81mwb54xgk"]

[ext_resource type="Script" path="res://src/widgets/w_rank_popup.gd" id="1_61drw"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="1_s3p6t"]
[ext_resource type="PackedScene" uid="uid://d4hbr21tf740b" path="res://src/widgets/w_rank.tscn" id="2_ef6gy"]
[ext_resource type="Texture2D" uid="uid://bs67ypxaa05ql" path="res://assets/textures/widgets/icons/medalGold.png" id="3_xj1wq"]
[ext_resource type="Texture2D" uid="uid://bjruvwxi017qv" path="res://assets/textures/widgets/icons/medalSilver.png" id="4_w7ejd"]
[ext_resource type="Texture2D" uid="uid://co6olb4lv4k6p" path="res://assets/textures/widgets/icons/medalBronze.png" id="5_x5pdj"]
[ext_resource type="Texture2D" uid="uid://dpv4fww0l2lpr" path="res://assets/textures/widgets/others/buttonSmall.png" id="6_fl5lx"]

[sub_resource type="LabelSettings" id="LabelSettings_dwtds"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_rank_popup" type="MarginContainer"]
custom_minimum_size = Vector2(220, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61drw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_s3p6t")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="RankContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="w_rank" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("2_ef6gy")]
layout_mode = 2
medal_texture = ExtResource("3_xj1wq")

[node name="w_rank2" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("2_ef6gy")]
layout_mode = 2
medal_texture = ExtResource("4_w7ejd")

[node name="w_rank3" parent="MarginContainer/VBoxContainer/MarginContainer/RankContainer" instance=ExtResource("2_ef6gy")]
layout_mode = 2
medal_texture = ExtResource("5_x5pdj")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_config" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_fl5lx")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/btn_config"]
layout_mode = 2
offset_left = 52.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 51.0
size_flags_horizontal = 4
text = "返回"
label_settings = SubResource("LabelSettings_dwtds")
horizontal_alignment = 1
vertical_alignment = 1
